@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods


class Team{
    collaborators
}

class Entry {
    task
}

class Collaborators {
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    ID doc type
    ID number
}

class ToDoList{
    task description
}

class Agenda{
    task description
}

Entry "1" -- "*" ToDoList : originate new entry >
Team "1" -- "1..*" Entry : attributed <
Collaborators "2..*" -- "1" Team : make >
ToDoList "*" -- "1" Agenda : goes to >
@enduml


